--- a/Spotify Tiles/Spotify Tiles.vbproj
+++ b/Spotify Tiles/Spotify Tiles.vbproj
@@ -165,6 +165,7 @@
     </AppxManifest>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\cuenta.png" />
     <Content Include="Assets\Iconos\1.png" />
     <Content Include="Assets\Iconos\2.png" />
     <Content Include="Assets\Iconos\3.png" />
